Fixed button spacing

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -230,7 +230,7 @@ li {
 /* projects - general styling */
 .project-process > div, .information-architecture > div, .visual-design-branding, .clickable-prototype-testing, .conclusion {
   margin: 0 auto;
-  padding: 10vh 20vw 0;
+  padding: 10vh 20vw;
   width: 100%;
 }
 
@@ -253,11 +253,7 @@ li {
 }
 
 .branding {
-  padding: 10vh 0;
-}
-
-.pref-test {
-  padding-bottom: 10vh;
+  padding-top: 10vh;
 }
 
 .btn {
